--- a/index.htm
+++ b/index.htm
@@ -52,171 +52,186 @@
 
 		//------------------------------
         var locLength = items.locations.length;
-        var trackChanges = $('#trackedChanges');
+        var inputs = {};
+        var trackChanges;
         var itemsPage;
         var mainFrame;
-        var selectLegal;
-        var radioTrue;
-        var radioFalse;
-        var inputs;
 
         jQuery.expr[":"].Contains = jQuery.expr.createPseudo(function(arg) {
             return function( elem ) {
                 return jQuery(elem).text().toUpperCase().indexOf(arg.toUpperCase()) >= 0;
             };
         });
+        function findElements(){
+            var trCount;
+            var i;
+            mainFrame =  $('iframe[name = "SFOMainFrame"]').contents();
+            trCount = mainFrame.find('#locationsTable tbody tr').length;
+            trackChanges = $('#trackedChanges');
+            inputs.Locations = [];
+            inputs.SelectLegal = mainFrame.find('#LegalEntity :Contains(' + items.Entity + ')');
+            inputs.radioTrue = mainFrame.find('#ExpModCustCA\\[0\\]');
+            inputs.radioFalse = mainFrame.find('#ExpModCustCA\\[1\\]');
+            inputs.CommercialName = mainFrame.find("input[name *= 'CommercialName']")[0];
+            inputs.SupplementaryName = mainFrame.find("input[name *= 'SupplementaryName']")[0];
+            inputs.PolicyEffectiveDt = mainFrame.find("input[name = 'PolicyEffectiveDt']")[0];
+            inputs.YIB = mainFrame.find("input[name = 'YIB']")[0];
+            inputs.TaxId = mainFrame.find("input[name *= 'TaxId']")[0];
+            inputs.insuredEmailAddr = mainFrame.find("input[name = 'insuredEmailAddr']")[0];
+            inputs.ExperienceModificationCustCA = mainFrame.find("input[name *= 'ExperienceModificationCustCA']")[0];
+            inputs.ExpModPlaceholder = mainFrame.find('#ExpModPlaceholder');
+            inputs.LegalEntity = mainFrame.find('#LegalEntity');
+            inputs.table = mainFrame.find('tbody');
+            for (i = 0; i < trCount ; i++){
+                inputs.Locations.push({
+                    locNum: mainFrame.find('input[name = "locationsTable:' + i + ':locationNum"]')[0],
+                    Street: mainFrame.find('input[name = "locationsTable:' + i + ':_id76"]')[0],
+                    City: mainFrame.find('input[name = "locationsTable:' + i + ':_id78"]')[0],
+                    State: mainFrame.find('input[name = "locationsTable:' + i + ':_id80"]')[0],
+                    Zip1: mainFrame.find('input[name = "locationsTable:' + i + ':_id83"]')[0],
+                    Zip2: mainFrame.find('input[name = "locationsTable:' + i + ':_id85"]')[0]
+                })
+            }
 
+        }
         function initEvents(){
-            inputs = mainFrame.contents().find('input');
-            inputs.unbind('change');
-            mainFrame.contents().find('#ExpModPlaceholder').change(dataChanged);
-            mainFrame.contents().find('#LegalEntity').change(function(){
-                dataChanged();
+            jQuery.each(inputs, function(){
+                $(this).unbind('change');
+                $(this).change(dataChanged);
             });
-            inputs.change(dataChanged);
+            inputs.Locations.forEach(function(loc) {
+                jQuery.each(loc, function(){
+                    $(this).unbind('change');
+                    $(this).change(dataChanged);
+                });
+            });
+            inputs.ExpModPlaceholder.change(dataChanged);
+            inputs.LegalEntity.change(dataChanged);
+            inputs.table.change(dataChanged);
+        }
+        function frameInit(){
+            itemsPage = frameDataRead();
+        }
+        function findAndInitEvents(){
+            findElements();
+            initEvents();
         }
 
         function toggleExpModMain() {
-            if (mainFrame.contents().find('#ExpModCustCA\\[0\\]').is(':checked')) {
-                if (mainFrame.contents().find("#ExperienceModificationCustCABlock").is(':hidden')){
-                    mainFrame.contents().find('#ExpModPlaceholder').
+            if (mainFrame.find('#ExpModCustCA\\[0\\]').is(':checked')) {
+                if (mainFrame.find("#ExperienceModificationCustCABlock").is(':hidden')){
+                    mainFrame.find('#ExpModPlaceholder').
                             append('<input id="ExperienceModificationCustCA" tabindex="10" name="ExperienceModificationCustCA" maxlength="5" value="" size="6" type="text" autocomplete="off">');
-                    mainFrame.contents().find('#ExperienceModificationCustCABlock').show();
+                    mainFrame.find('#ExperienceModificationCustCABlock').show();
                 }
-                mainFrame.contents().find('#ExperienceModificationCustCA')[0].value = items.ExpMod;
-                initEvents();
+                findAndInitEvents();
+                inputs.ExperienceModificationCustCA.value = items.ExpMod;
             }
             else {
-                mainFrame.contents().find('#ExperienceModificationCustCABlock').hide();
-                mainFrame.contents().find('#ExperienceModificationCustCA').remove();
+                mainFrame.find('#ExperienceModificationCustCABlock').hide();
+                mainFrame.find('#ExperienceModificationCustCA').remove();
             }
         }
 
         function AddLocationRowMain(i) {
-            var rc = mainFrame.contents().find('#locationsTable tbody tr').length;
-
+            var rc = mainFrame.find('#locationsTable tbody tr').length;
             var block = '<tr><td><input name="locationsTable:' + rc + ':locationNum" maxlength="10" size="2"></td>'
                     + '<td><input name="locationsTable:' + rc + ':_id76" maxlength="40" size="40"></td>'
                     + '<td><input name="locationsTable:' + rc + ':_id78" maxlength="80" size="30"></td>'
                     + '<td><input name="locationsTable:' + rc + ':_id80" maxlength="2" size="1"></td>'
                     + '<td><input name="locationsTable:' + rc + ':_id83" maxlength="5" size="5">-<input name="locationsTable:0:_id85" maxlength="4" size="4"></td></tr>';
-            if (i === rc - 1) $(block).appendTo(mainFrame.contents().find('#locationsTable tbody'));
+            if (i === rc - 1) $(block).appendTo(mainFrame.find('#locationsTable tbody'));
         }
 
         function clickFill() {
-            inputs[0].value = items.InsuredName;
-            inputs[1].value = items.DBA;
-            inputs[2].value = items.EffectiveDate;
-            inputs[3].value = items.YIB;
-            selectLegal.attr("selected", "selected");
-            inputs[4].value = items.FEIN;
-            inputs[5].value = items.Email;
-            inputs[6].value = items.Email;
+            inputs.CommercialName.value = items.InsuredName;
+            inputs.SupplementaryName.value = items.DBA;
+            inputs.PolicyEffectiveDt.value = items.EffectiveDate;
+            inputs.YIB.value = items.YIB;
+            inputs.SelectLegal.attr("selected", "selected");
+            inputs.TaxId.value = items.FEIN;
+            inputs.insuredEmailAddr.value = items.Email;
             if (items.ExpMod) {
-                radioTrue.prop('checked', true);
+                inputs.radioTrue.prop('checked', true);
                 toggleExpModMain();
             }
             items.locations.forEach(function(loc, i){
-                mainFrame.contents().find('input[name = "locationsTable:' + i + ':locationNum"]')[0].value = loc.locNum;
-                mainFrame.contents().find('input[name = "locationsTable:' + i + ':_id76"]')[0].value = loc.Street;
-                mainFrame.contents().find('input[name = "locationsTable:' + i + ':_id78"]')[0].value = loc.City;
-                mainFrame.contents().find('input[name = "locationsTable:' + i + ':_id80"]')[0].value = loc.State;
-                mainFrame.contents().find('input[name = "locationsTable:' + i + ':_id83"]')[0].value = loc.Zip.split('-')[0];
-                if (loc.Zip.split('-')[1]) mainFrame.contents().find('input[name = "locationsTable:0:_id85"]')[i].value = loc.Zip.split('-')[1];
+                mainFrame.find('input[name = "locationsTable:' + i + ':locationNum"]')[0].value = loc.locNum;
+                mainFrame.find('input[name = "locationsTable:' + i + ':_id76"]')[0].value = loc.Street;
+                mainFrame.find('input[name = "locationsTable:' + i + ':_id78"]')[0].value = loc.City;
+                mainFrame.find('input[name = "locationsTable:' + i + ':_id80"]')[0].value = loc.State;
+                mainFrame.find('input[name = "locationsTable:' + i + ':_id83"]')[0].value = loc.Zip.split('-')[0];
+                if (loc.Zip.split('-')[1]) mainFrame.find('input[name = "locationsTable:0:_id85"]')[i].value = loc.Zip.split('-')[1];
                 if (i !== locLength - 1) AddLocationRowMain(i);
             });
-            initEvents();
-            dataChanged();
+            findAndInitEvents();
+            frameInit();
         }
 
         function frameDataRead(){
-            var textSelect = mainFrame.contents().find('#LegalEntity option:selected').text();
-            var trCount = mainFrame.contents().find('#locationsTable tbody tr').length;
-            if (mainFrame.contents().find('#ExperienceModificationCustCA')[0]) var expMod = mainFrame.contents().find('#ExperienceModificationCustCA')[0].value;
+            var textSelect = mainFrame.find('#LegalEntity option:selected').text();
+            var trCount = mainFrame.find('#locationsTable tbody tr').length;
+            if (mainFrame.find('#ExperienceModificationCustCA')[0]) var expMod = mainFrame.find('#ExperienceModificationCustCA')[0].value;
             var itemData = {
-                InsuredName: inputs[0].value,
-                DBA: inputs[1].value,
-                EffectiveDate: inputs[2].value,
-                YIB: inputs[3].value,
+                InsuredName: inputs.CommercialName.value,
+                DBA: inputs.SupplementaryName.value,
+                EffectiveDate: inputs.PolicyEffectiveDt.value,
+                YIB: inputs.YIB.value,
                 Entity: textSelect,
-                FEIN: inputs[4].value,
-                Email: inputs[5].value,
+                FEIN: inputs.TaxId.value,
+                Email: inputs.insuredEmailAddr.value,
                 ExpMod: expMod || '',
                 locations: []
             };
             for (var i = 0; i < trCount ; i++){
                 var zip;
-                if (mainFrame.contents().find('input[name = "locationsTable:0:_id85"]')[i].value) {
-                    zip =  mainFrame.contents().find('input[name = "locationsTable:' + i + ':_id83"]')[0].value +
-                            ' - ' + mainFrame.contents().find('input[name = "locationsTable:0:_id85"]')[i].value;
+                if (mainFrame.find('input[name = "locationsTable:0:_id85"]')[i].value) {
+                    zip =  mainFrame.find('input[name = "locationsTable:' + i + ':_id83"]')[0].value +
+                            ' - ' + mainFrame.find('input[name = "locationsTable:0:_id85"]')[i].value;
                 } else {
-                    zip =  mainFrame.contents().find('input[name = "locationsTable:' + i + ':_id83"]')[0].value;
+                    zip =  mainFrame.find('input[name = "locationsTable:' + i + ':_id83"]')[0].value;
                 }
 
                 itemData.locations.push({
-                    locNum: mainFrame.contents().find('input[name = "locationsTable:' + i + ':locationNum"]')[0].value,
-                    Street: mainFrame.contents().find('input[name = "locationsTable:' + i + ':_id76"]')[0].value,
-                    City: mainFrame.contents().find('input[name = "locationsTable:' + i + ':_id78"]')[0].value,
-                    State: mainFrame.contents().find('input[name = "locationsTable:' + i + ':_id80"]')[0].value,
+                    locNum: mainFrame.find('input[name = "locationsTable:' + i + ':locationNum"]')[0].value,
+                    Street: mainFrame.find('input[name = "locationsTable:' + i + ':_id76"]')[0].value,
+                    City: mainFrame.find('input[name = "locationsTable:' + i + ':_id78"]')[0].value,
+                    State: mainFrame.find('input[name = "locationsTable:' + i + ':_id80"]')[0].value,
                     Zip: zip
                 })
             }
             return itemData;
         }
 
-        function frameInit(){
-            itemsPage = frameDataRead();
-        }
+
         function writeDif(name, oldVal, newVal) {
-            trackChanges.html(trackChanges.html() + name + oldVal + ' to ' + newVal);
+            if (oldVal !== newVal) trackChanges.html(name + oldVal + ' to ' + newVal + trackChanges.html());
         }
         function difference(oldData, newData) {
-            var newLength = newData.locations.length;
-            var oldLength = oldData.locations.length;
-            var length;
-            if(newLength > oldLength) length = oldLength;
-            else length = newLength;
-            trackChanges.html('');
-            if (oldData.InsuredName !== newData.InsuredName) {
-                writeDif('<br/>Insured Name ', oldData.InsuredName, newData.InsuredName);
-            }
-            if (oldData.DBA !== newData.DBA) {
-                writeDif('<br/>Doing Business As ', oldData.DBA, newData.DBA);
-            }
-            if (oldData.EffectiveDate !== newData.EffectiveDate) {
-                writeDif('<br/>Effective Date ', oldData.EffectiveDate, newData.EffectiveDate);
-            }
-            if (oldData.YIB !== newData.YIB) {
-                writeDif('<br/>Years in Business ', oldData.YIB, newData.YIB);
-            }
-            if (oldData.Entity !== newData.Entity) {
-                writeDif('<br/>Legal Entity ', oldData.Entity, newData.Entity);
-            }
-            if (oldData.FEIN !== newData.FEIN) {
-                writeDif('<br/>FEIN ', oldData.FEIN, newData.FEIN);
-            }
-            if (oldData.Email !== newData.Email) {
-                writeDif('<br/>Insured E-Mail ', oldData.Email, newData.Email);
-            }
-            if (oldData.ExpMod !== newData.ExpMod) {
-                writeDif('<br/>Experience Modification ', oldData.ExpMod, newData.ExpMod);
-            }
+            var length = newData.locations.length;
+            writeDif('<br/>Insured Name ', oldData.InsuredName, newData.InsuredName);
+            writeDif('<br/>Doing Business As ', oldData.DBA, newData.DBA);
+            writeDif('<br/>Effective Date ', oldData.EffectiveDate, newData.EffectiveDate);
+            writeDif('<br/>Years in Business ', oldData.YIB, newData.YIB);
+            writeDif('<br/>Legal Entity ', oldData.Entity, newData.Entity);
+            writeDif('<br/>FEIN ', oldData.FEIN, newData.FEIN);
+            writeDif('<br/>Insured E-Mail ', oldData.Email, newData.Email);
+            writeDif('<br/>Experience Modification ', oldData.ExpMod, newData.ExpMod);
             for (var i =0; i < length; i++) {
-                if (oldData.locations[i].locNum !== newData.locations[i].locNum) {
-                    writeDif('<br/>Location City #' + [i] + ' ', oldData.locations[i].locNum, newData.locations[i].locNum);
+                if (!oldData.locations[i]) {
+                    oldData.locations.push({
+                        locNum: '',
+                        Street: '',
+                        City: '',
+                        State: '',
+                        Zip: ''
+                    })
                 }
-                if (oldData.locations[i].Street !== newData.locations[i].Street) {
-                    writeDif('<br/>Location City #' + [i] + ' ', oldData.locations[i].Street, newData.locations[i].Street);
-                }
-                if (oldData.locations[i].City !== newData.locations[i].City) {
-                    writeDif('<br/>Location City #' + [i] + ' ', oldData.locations[i].City, newData.locations[i].City);
-                }
-                if (oldData.locations[i].State !== newData.locations[i].State) {
-                    writeDif('<br/>Location City #' + [i] + ' ', oldData.locations[i].State, newData.locations[i].State);
-                }
-                if (oldData.locations[i].Zip !== newData.locations[i].Zip ) {
-                    writeDif('<br/>Location City #' + [i] + ' ', oldData.locations[i].Zip, newData.locations[i].Zip);
-                }
+                writeDif('<br/>Location City #' + [i] + ' ', oldData.locations[i].locNum, newData.locations[i].locNum);
+                writeDif('<br/>Location City #' + [i] + ' ', oldData.locations[i].Street, newData.locations[i].Street);
+                writeDif('<br/>Location City #' + [i] + ' ', oldData.locations[i].City, newData.locations[i].City);
+                writeDif('<br/>Location City #' + [i] + ' ', oldData.locations[i].State, newData.locations[i].State);
+                writeDif('<br/>Location City #' + [i] + ' ', oldData.locations[i].Zip, newData.locations[i].Zip);
             }
 
 
@@ -228,11 +243,7 @@
         }
 
         $('iframe[name = "SFOMainFrame"]').load(function () {
-            mainFrame =  $('iframe[name = "SFOMainFrame"]');
-            selectLegal = mainFrame.contents().find('#LegalEntity :Contains(' + items.Entity + ')');
-            radioTrue = mainFrame.contents().find('#ExpModCustCA\\[0\\]');
-            radioFalse = mainFrame.contents().find('#ExpModCustCA\\[1\\]');
-            initEvents();
+            findAndInitEvents();
             frameInit();
             $('#FillPage').on('click', clickFill);
         });
